# fastapi-template

./: .gitignore  Makefile  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .dockerignore  .isort.cfg  Dockerfile  Makefile  README.md  TODO.org  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  release.py  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: documentation.yml  testing.yml
{{cookiecutter.project_name}}/docs/: index.md
{{cookiecutter.project_name}}/tests/: conftest.py
{{cookiecutter.project_name}}/tests/test_api/: test_webservice.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: main.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/core/: event_handlers.py  middlewares.py  settings.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/routes/: __init__.py  hello_route.py  info.py  schemas.py
